[metadata]
name = python-neat
version = 0.0.1
author = Tom S.
author_email = 
description = NeuroEvolution of Augmenting Topologies
long_description = file: README.md
url = https://github.com/TheTompiler/Neat
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = neat
packages = find:
python_requires = >=3.6

[options.packages.find]
where = neat